<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.favorites.favorite.CoinFavorite"
    android:background="@color/black">


    <TextView
        android:id="@+id/text_coin_top_bar"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorites_title_digital_coin"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/data_coin_top_bar"
        android:layout_margin="16dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="00/00/0000"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/text_coin_top_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_recycler_favorite"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_coin_top_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_favorit_coin"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/coin_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/favorites_botao_lista_de_moedas"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/button_main_favorite"
                    android:layout_width="205dp"
                    android:layout_height="50dp"
                    android:layout_gravity="top"
                    android:backgroundTint="@color/black"
                    android:padding="100dp"
                    android:src="@drawable/favorites_ic_baseline_attach_money_30" />

                <TextView
                    android:id="@+id/txt_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom|center"
                    android:text="@string/favorites_button_coins"
                    android:textColor="#9c9c9c" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/favorites_botao_moedas_favoritas"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/button_star_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/black"
                    android:padding="100dp"
                    android:src="@drawable/favorites_ic_baseline_star_30" />

                <TextView
                    android:id="@+id/txt_favorite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom|center"
                    android:text="@string/favorites_button_favorite"
                    android:textColor="#9c9c9c" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>
